Fix background image on mobile

--- a/cover.css
+++ b/cover.css
@@ -28,13 +28,13 @@ body {
   /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 
-  background: url('./img/trees_background_tiltshift.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
+  background: url('./img/trees_background_tiltshift.jpg');
+  background-attachment: fixed;
   background-size: cover;
-  -o-background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .cover-container {
